--- a/AutoClick/Pages/Admin/DetallePublicidadEmpresa.cshtml
+++ b/AutoClick/Pages/Admin/DetallePublicidadEmpresa.cshtml
@@ -893,7 +893,7 @@
                     <select name="TamanoAnuncio" class="modal-field-input" required>
                         <option value="">Seleccione un tamaño</option>
                         <option value="1">Horizontal (1010 x 189 px) - Ratio 5.3:1</option>
-                        <option value="2">Medio Vertical (401 x 287 px) - Ratio 1.4:1</option>
+                        @* <option value="2">Medio Vertical (401 x 287 px) - Ratio 1.4:1</option> *@
                         <option value="3">Grande Vertical (344 x 423 px) - Ratio 0.8:1</option>
                     </select>
                     <small class="modal-field-hint">
@@ -963,7 +963,7 @@
                     <select name="TamanoAnuncio" id="editTamanoAnuncio" class="modal-field-input" required>
                         <option value="">Seleccione un tamaño</option>
                         <option value="1">Horizontal (1010 x 189 px) - Ratio 5.3:1</option>
-                        <option value="2">Medio Vertical (401 x 287 px) - Ratio 1.4:1</option>
+                        @* <option value="2">Medio Vertical (401 x 287 px) - Ratio 1.4:1</option> *@
                         <option value="3">Grande Vertical (344 x 423 px) - Ratio 0.8:1</option>
                     </select>
                     <small class="modal-field-hint">
