--- a/AutoClick/Pages/Producto.cshtml
+++ b/AutoClick/Pages/Producto.cshtml
@@ -237,8 +237,7 @@
                                 }
                                 else
                                 {
-                                    <p class="marchamo-tari-disponible">VALOR FISCAL NO DISPONIBLE</p>
-                                    <p style="font-family: 'Montserrat', sans-serif; font-weight: 500; font-size: 12px; color: rgba(0, 0, 0, 0.5); margin: 0;">Contacte al vendedor para más información</p>
+                                    <p class="marchamo-tari-disponible">DISPONIBLE PRÓXIMAMENTE</p>
                                 }
                             </div>
 
@@ -251,7 +250,7 @@
                                 }
                                 else
                                 {
-                                    <p class="marchamo-tari-disponible">PRECIO NO DISPONIBLE</p>
+                                    <p class="marchamo-tari-disponible">DISPONIBLE PRÓXIMAMENTE</p>
                                 }
                             </div>
 
